Add send and verify otp with swagger document
